# gestio-mobile

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.agent/: roadmap-pyodide-7.md
backend/: api.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  attachments.py  recurrences.py  transactions.py
backend/config/: README.md  paths.py
backend/domains/home/: README.md
backend/domains/transactions/: GLOSSARY.md  README.md
backend/domains/transactions/database/: README.md  __init__.py  categories.yaml  constants.py  model.py  model_recurrence.py  repository.py  repository_attachment.py  repository_recurrence.py  schema.py  schema_table_recurrence.py
backend/domains/transactions/ocr/: __init__.py
backend/domains/transactions/ocr/core/: README.md  __init__.py  easyocr_engine.py  groq_parser.py  hardware_utils.py  parser.py
backend/domains/transactions/ocr/services/: README.md  __init__.py  ocr_patterns.yaml  pattern_manager.py
backend/domains/transactions/recurrence/: README.md  __init__.py  recurrence_service.py
backend/domains/transactions/services/: README.md  attachment_service.py  transaction_service.py
backend/domains/transactions/view/: README.md
backend/domains/transactions/view/components/: __init__.py  attachment_dialog.py  calendar_component.py  charts.py  kpi_metrics.py
backend/domains/transactions/view/sunburst_navigation/: __init__.py
backend/shared/: README.md
backend/shared/database/: connection.py
backend/shared/database/database/: README.md  __init__.py  capacitor_connection.py  connection.py  desktop_connection.py
backend/shared/services/: README.md
backend/shared/utils/: __init__.py  amount_parser.py  converters.py  dataframe_utils.py
backend/tests/: conftest.py
backend/tests/test_ocr/: test_groq_parser.py  test_multi_core_ocr.py  test_parsers.py
backend/tests/test_services/: test_attachment_service.py
backend/tests/test_shared/: test_amount_parser.py  test_categories_loader.py
backend/tests/test_transactions/: test_repository.py
(+58 files in other folders)
