[project]
name = "gestion-financiere"
version = "4.0.0"
description = "Application de gestion financiere personnelle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "pyyaml",
    "pdfminer.six",
    "python-dateutil",
    "psutil",
    "pydantic",
    "requests",
    "pyjwt",
    "cryptography",
    "python-dotenv",
    "groq>=1.0.0",
]

[project.scripts]
gestio = "launcher.launcher:main"

[project.optional-dependencies]
dev = []
test = [
    "pytest",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0",  # Windows uniquement (PyInstaller + Inno Setup)
]
dev = [
    "pandas-stubs~=2.3.3",
]
test = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
include = ["domains*", "shared*", "config*", "resources*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.css", "*.png", "*.ico"]
